--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
         <div id="text">Good Evening Bebi!</div>
         <div class="button">
-            <button type="button" id="btn">Click me!</button>
+            <button type="button" id="btn">Click!</button>
         </div>
     </div>
     <script src="index.js"></script>
