--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="content">
-        <div id="text">Good Evening Bebi!</div>
+        <div id="text">Hello World</div>
         <div class="button">
             <button type="button" id="btn">Click!</button>
         </div>
